# -ertification

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
network/: admin.py  models.py  serializer.py  urls.py  views.py
network/migrations/: 0001_initial.py  0002_alter_contacts_options_alter_network_options.py
users/: models.py  permissions.py  urls.py  views.py
users/migrations/: 0001_initial.py
